# esp32-led-controller

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  make-html-c.sh  partitions.csv  sdkconfig  sdkconfig.OLIMEX_ESP32_EVB_B  sdkconfig.OLIMEX_ESP32_GATEWAY_G
html/: index.html  local.js
main/: CMakeLists.txt  Kconfig.projbuild  bonjour.c  bonjour.h  component.mk  config.c  config.h  controller.c  controller.h  copyright.sh  copyright.txt  decoding.c  decoding.h  ethernet.c  ethernet.h  fastrmt.S  fastrmt.h  filesystem.c  filesystem.h  gamma.c  gamma.xlsx  home.c  home.h  html.h  jpgfile.c  jpgfile.h  led.c  led.h  mjpeg.c  mjpeg.h  mysntp.c  mysntp.h  mystring.c  mystring.h  ownled.c  ownled.h  picojpeg.c  picojpeg.h  playlist.c  playlist.h  (+18 more)
