idf_component_register(SRCS bonjour.c websocket.c compile.c
    config.c  controller.c  decoding.c  ethernet.c  filesystem.c  
    home.c  jpgfile.c  led.c  mjpeg.c  mysntp.c  mystring.c  
    ownled.c  picojpeg.c  playlist.c  rtp.c  status.c  udp.c  
    web.c  wifi.c  ws2812fx.c fastrmt.S websession.c webjson.c
    INCLUDE_DIRS "")